--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewire-aliases": "^0.2.0",
+    "react-app-rewired": "^2.1.3"
   }
 }
