--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.12",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "uid": "^0.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
